--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,7 +44,58 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DruidClient.cs" />
+    <Compile Include="DruidClientException.cs" />
+    <Compile Include="DruidClientTimeoutException.cs" />
+    <Compile Include="Fluent\Filters\InFilter.cs" />
+    <Compile Include="Fluent\Filters\FragmentQuery.cs" />
+    <Compile Include="Fluent\Filters\ContainsQuery.cs" />
+    <Compile Include="Fluent\Filters\ISearchFilterQuery.cs" />
+    <Compile Include="Fluent\Filters\JavaScriptFilter.cs" />
+    <Compile Include="Fluent\Filters\RegexFilter.cs" />
+    <Compile Include="Fluent\Values\IGranularitySpec.cs" />
+    <Compile Include="Fluent\Values\PeriodGranularity.cs" />
+    <Compile Include="Query\DruidResponse.cs" />
+    <Compile Include="Fluent\Filters\AndFilter.cs" />
+    <Compile Include="Fluent\Filters\BoundFilter.cs" />
+    <Compile Include="Fluent\Filters\InsensitiveContainsQuery.cs" />
+    <Compile Include="Fluent\Filters\IFilter.cs" />
+    <Compile Include="Fluent\Filters\LikeFilter.cs" />
+    <Compile Include="Fluent\Filters\NotFilter.cs" />
+    <Compile Include="Fluent\Filters\OrFilter.cs" />
+    <Compile Include="Fluent\Filters\SearchFilter.cs" />
+    <Compile Include="Fluent\Filters\SelectorFilter.cs" />
+    <Compile Include="Query\IQueryResponse.cs" />
+    <Compile Include="Fluent\QueryDescriptors\GroupByQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\IGroupByQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\IQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\ISelectQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\ITimeseriesQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\ITopNQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\QueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\SelectQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\TimeseriesQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\TopNQueryDescriptor.cs" />
+    <Compile Include="Query\QueryRequestData.cs" />
+    <Compile Include="Fluent\Requests\GroupByRequest.cs" />
+    <Compile Include="Fluent\Requests\IDruidRequest.cs" />
+    <Compile Include="Fluent\Requests\SelectRequest.cs" />
+    <Compile Include="Fluent\Requests\TimeseriesRequest.cs" />
+    <Compile Include="Fluent\Requests\TopNRequest.cs" />
+    <Compile Include="Fluent\Values\AggregationSpec.cs" />
+    <Compile Include="Fluent\Values\ContextSpec.cs" />
+    <Compile Include="Fluent\Values\FilterSpec.cs" />
+    <Compile Include="Fluent\Values\Granularities.cs" />
+    <Compile Include="Fluent\Values\DurationGranularity.cs" />
+    <Compile Include="Fluent\Values\HavingSpec.cs" />
+    <Compile Include="Fluent\Values\LimitSpec.cs" />
+    <Compile Include="Fluent\Values\OrderByColumnSpec.cs" />
+    <Compile Include="Fluent\Values\PagingSpec.cs" />
+    <Compile Include="Fluent\Values\PostAggregationSpec.cs" />
+    <Compile Include="Fluent\Values\TopNMetricSpec.cs" />
+    <Compile Include="IDruidClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Requester.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
