--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Raygun.Druid4Net</RootNamespace>
     <AssemblyName>Raygun.Druid4Net</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -33,10 +33,19 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Jil, Version=2.15.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Jil.2.15.4\lib\net45\Jil.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Sigil, Version=4.7.0.0, Culture=neutral, PublicKeyToken=2d06c3494341c8ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sigil.4.7.0\lib\net45\Sigil.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,13 +62,15 @@
     <Compile Include="Fluent\Filters\ISearchFilterQuery.cs" />
     <Compile Include="Fluent\Filters\JavaScriptFilter.cs" />
     <Compile Include="Fluent\Filters\RegexFilter.cs" />
+    <Compile Include="Fluent\Requests\SelectQuery.cs" />
+    <Compile Include="Fluent\Values\FilterSpecTypes.cs" />
     <Compile Include="Fluent\Values\IGranularitySpec.cs" />
     <Compile Include="Fluent\Values\PeriodGranularity.cs" />
     <Compile Include="Query\DruidResponse.cs" />
     <Compile Include="Fluent\Filters\AndFilter.cs" />
     <Compile Include="Fluent\Filters\BoundFilter.cs" />
     <Compile Include="Fluent\Filters\InsensitiveContainsQuery.cs" />
-    <Compile Include="Fluent\Filters\IFilter.cs" />
+    <Compile Include="Fluent\Filters\IFilterSpec.cs" />
     <Compile Include="Fluent\Filters\LikeFilter.cs" />
     <Compile Include="Fluent\Filters\NotFilter.cs" />
     <Compile Include="Fluent\Filters\OrFilter.cs" />
@@ -96,6 +107,9 @@
     <Compile Include="IDruidClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Requester.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
