WIP: Refactoring and start adding in unit tests

--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -56,12 +56,22 @@
     <Compile Include="DruidClient.cs" />
     <Compile Include="DruidClientException.cs" />
     <Compile Include="DruidClientTimeoutException.cs" />
+    <Compile Include="Fluent\Aggregations\SumAggregator.cs" />
+    <Compile Include="Fluent\Aggregations\LongSumAggregator.cs" />
+    <Compile Include="Fluent\Aggregations\CountAggregator.cs" />
+    <Compile Include="Fluent\Aggregations\IAggregationSpec.cs" />
     <Compile Include="Fluent\Filters\InFilter.cs" />
     <Compile Include="Fluent\Filters\FragmentQuery.cs" />
     <Compile Include="Fluent\Filters\ContainsQuery.cs" />
     <Compile Include="Fluent\Filters\ISearchFilterQuery.cs" />
     <Compile Include="Fluent\Filters\JavaScriptFilter.cs" />
     <Compile Include="Fluent\Filters\RegexFilter.cs" />
+    <Compile Include="Fluent\Metrics\ITopNMetricSpec.cs" />
+    <Compile Include="Fluent\Metrics\NumericTopNMetricSpec.cs" />
+    <Compile Include="Fluent\PostAggregations\FieldAccessPostAggregator.cs" />
+    <Compile Include="Fluent\PostAggregations\IPostAggregationSpec.cs" />
+    <Compile Include="Fluent\QueryDescriptors\IAggregatableQueryDescriptor.cs" />
+    <Compile Include="Fluent\QueryDescriptors\AggregatableQueryDescriptor.cs" />
     <Compile Include="Fluent\Requests\SelectQuery.cs" />
     <Compile Include="Fluent\Values\FilterSpecTypes.cs" />
     <Compile Include="Fluent\Values\IGranularitySpec.cs" />
