--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -1,131 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A0971AC2-69BD-4E48-882A-9CF6A9253D3A}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Raygun.Druid4Net</RootNamespace>
-    <AssemblyName>Raygun.Druid4Net</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>netstandard1.6;netstandard2.0;net45;</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
+    <DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6'">
+    <DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD1_6</DefineConstants>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Jil, Version=2.15.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Jil.2.15.4\lib\net45\Jil.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Sigil, Version=4.7.0.0, Culture=neutral, PublicKeyToken=2d06c3494341c8ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sigil.4.7.0\lib\net45\Sigil.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45'">
+    <DefineConstants>NET45;NETFULL</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="DruidClient.cs" />
-    <Compile Include="DruidClientException.cs" />
-    <Compile Include="DruidClientTimeoutException.cs" />
-    <Compile Include="Fluent\Aggregations\SumAggregator.cs" />
-    <Compile Include="Fluent\Aggregations\LongSumAggregator.cs" />
-    <Compile Include="Fluent\Aggregations\CountAggregator.cs" />
-    <Compile Include="Fluent\Aggregations\IAggregationSpec.cs" />
-    <Compile Include="Fluent\Filters\InFilter.cs" />
-    <Compile Include="Fluent\Filters\FragmentQuery.cs" />
-    <Compile Include="Fluent\Filters\ContainsQuery.cs" />
-    <Compile Include="Fluent\Filters\ISearchFilterQuery.cs" />
-    <Compile Include="Fluent\Filters\JavaScriptFilter.cs" />
-    <Compile Include="Fluent\Filters\RegexFilter.cs" />
-    <Compile Include="Fluent\Metrics\ITopNMetricSpec.cs" />
-    <Compile Include="Fluent\Metrics\NumericTopNMetricSpec.cs" />
-    <Compile Include="Fluent\PostAggregations\FieldAccessPostAggregator.cs" />
-    <Compile Include="Fluent\PostAggregations\IPostAggregationSpec.cs" />
-    <Compile Include="Fluent\QueryDescriptors\IAggregatableQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\AggregatableQueryDescriptor.cs" />
-    <Compile Include="Fluent\Requests\SelectRequestData.cs" />
-    <Compile Include="Fluent\Requests\TopNRequestData.cs" />
-    <Compile Include="Fluent\Values\FilterSpecTypes.cs" />
-    <Compile Include="Fluent\Values\IGranularitySpec.cs" />
-    <Compile Include="Fluent\Values\PeriodGranularity.cs" />
-    <Compile Include="Query\DruidResponse.cs" />
-    <Compile Include="Fluent\Filters\AndFilter.cs" />
-    <Compile Include="Fluent\Filters\BoundFilter.cs" />
-    <Compile Include="Fluent\Filters\InsensitiveContainsQuery.cs" />
-    <Compile Include="Fluent\Filters\IFilterSpec.cs" />
-    <Compile Include="Fluent\Filters\LikeFilter.cs" />
-    <Compile Include="Fluent\Filters\NotFilter.cs" />
-    <Compile Include="Fluent\Filters\OrFilter.cs" />
-    <Compile Include="Fluent\Filters\SearchFilter.cs" />
-    <Compile Include="Fluent\Filters\SelectorFilter.cs" />
-    <Compile Include="Query\IQueryResponse.cs" />
-    <Compile Include="Fluent\QueryDescriptors\GroupByQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\IGroupByQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\IQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\ISelectQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\ITimeseriesQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\ITopNQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\QueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\SelectQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\TimeseriesQueryDescriptor.cs" />
-    <Compile Include="Fluent\QueryDescriptors\TopNQueryDescriptor.cs" />
-    <Compile Include="Query\QueryRequestData.cs" />
-    <Compile Include="Fluent\Requests\GroupByRequest.cs" />
-    <Compile Include="Fluent\Requests\IDruidRequest.cs" />
-    <Compile Include="Fluent\Requests\SelectRequest.cs" />
-    <Compile Include="Fluent\Requests\TimeseriesRequest.cs" />
-    <Compile Include="Fluent\Requests\TopNRequest.cs" />
-    <Compile Include="Fluent\Values\ContextSpec.cs" />
-    <Compile Include="Fluent\Values\FilterSpec.cs" />
-    <Compile Include="Fluent\Values\Granularities.cs" />
-    <Compile Include="Fluent\Values\DurationGranularity.cs" />
-    <Compile Include="Fluent\Values\HavingSpec.cs" />
-    <Compile Include="Fluent\Values\LimitSpec.cs" />
-    <Compile Include="Fluent\Values\OrderByColumnSpec.cs" />
-    <Compile Include="Fluent\Values\PagingSpec.cs" />
-    <Compile Include="Fluent\Values\PostAggregationSpec.cs" />
-    <Compile Include="IDruidClient.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\Requester.cs" />
+    <PackageReference Include="Jil" Version="2.15.4" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
