--- a/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
+++ b/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
@@ -54,7 +54,9 @@
     <Compile Include="JilSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\TestQueryBase.cs" />
-    <Compile Include="Queries\TopN\Top10Pages.cs" />
+    <Compile Include="Queries\TopN\FilteredTop5Pages.cs" />
+    <Compile Include="Queries\TopN\BasicTop10Pages.cs" />
+    <Compile Include="Queries\Wikiticker.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raygun.Druid4Net\Raygun.Druid4Net.csproj">
