Add topN metric specs and tests

--- a/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
+++ b/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Fluent\Intervals\IntervalTests.cs" />
     <Compile Include="Fluent\Limits\DefaultLimitSpecTests.cs" />
     <Compile Include="Fluent\Limits\OrderByColumnSpecTests.cs" />
+    <Compile Include="Fluent\Metrics\DimensionTopNMetricSpecTests.cs" />
+    <Compile Include="Fluent\Metrics\InvertedTopNMetricSpecTests.cs" />
+    <Compile Include="Fluent\Metrics\NumericTopNMetricSpecTests.cs" />
     <Compile Include="Fluent\PostAggregations\ArithmeticPostAggregatorTests.cs" />
     <Compile Include="Fluent\PostAggregations\FieldAccessPostAggregatorTests.cs" />
     <Compile Include="Fluent\PostAggregations\FinalizingFieldAccessPostAggregatorTests.cs" />
