--- a/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
+++ b/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
@@ -53,7 +53,10 @@
   <ItemGroup>
     <Compile Include="JilSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\GroupBy\PagesGroupedByCity.cs" />
+    <Compile Include="Queries\Select\PagesGroupedByCity.cs" />
     <Compile Include="Queries\TestQueryBase.cs" />
+    <Compile Include="Queries\Timeseries\PagesAddedOverTimeByHour.cs" />
     <Compile Include="Queries\TopN\FilteredTop5Pages.cs" />
     <Compile Include="Queries\TopN\BasicTop10Pages.cs" />
     <Compile Include="Queries\Wikiticker.cs" />
