--- a/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
+++ b/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
@@ -54,7 +54,7 @@
     <Compile Include="JilSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GroupBy\PagesGroupedByCity.cs" />
-    <Compile Include="Queries\Select\PagesGroupedByCity.cs" />
+    <Compile Include="Queries\Select\SelectSpecificPagedData.cs" />
     <Compile Include="Queries\TestQueryBase.cs" />
     <Compile Include="Queries\Timeseries\PagesAddedOverTimeByHour.cs" />
     <Compile Include="Queries\TopN\FilteredTop5Pages.cs" />
