--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -31,4 +31,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fluent\Dimensions" />
+  </ItemGroup>
 </Project>
