--- a/Raygun.Druid4Net.IntegrationTests/App.config
+++ b/Raygun.Druid4Net.IntegrationTests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="druid.broker.host" value="http://192.168.86.43"/>
+    <add key="druid.broker.host" value="http://druid3.ec2.raygun.io"/>
   </appSettings>
 </configuration>
