Add search integration test and fix sort

--- a/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
+++ b/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="NewtonsoftSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GroupBy\PagesGroupedByCity.cs" />
+    <Compile Include="Queries\Search\BasicSearch10Pages.cs" />
     <Compile Include="Queries\Select\SelectSpecificPagedData.cs" />
     <Compile Include="Queries\TestQueryBase.cs" />
     <Compile Include="Queries\Timeseries\PagesAddedOverTimeByHour.cs" />
