Add async to docs and async integration test example

--- a/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
+++ b/Raygun.Druid4Net.IntegrationTests/Raygun.Druid4Net.IntegrationTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Queries\Select\SelectSpecificPagedData.cs" />
     <Compile Include="Queries\TestQueryBase.cs" />
     <Compile Include="Queries\Timeseries\PagesAddedOverTimeByHour.cs" />
+    <Compile Include="Queries\TopN\AsyncBasicTop10Pages.cs" />
     <Compile Include="Queries\TopN\FilteredTop5Pages.cs" />
     <Compile Include="Queries\TopN\BasicTop10Pages.cs" />
     <Compile Include="Queries\Wikiticker.cs" />
