Add CardinalityAggregator and unit tests

--- a/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
+++ b/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fluent\Aggregations\AggregatorTestsBase.cs" />
+    <Compile Include="Fluent\Aggregations\CardinalityAggregatorTests.cs" />
     <Compile Include="Fluent\Aggregations\CountAggregatorTests.cs" />
     <Compile Include="Fluent\Aggregations\DoubleFirstAggregatorTests.cs" />
     <Compile Include="Fluent\Aggregations\DoubleLastAggregatorTests.cs" />
