Change configuration options to use Uris instead of strings

--- a/Raygun.Druid4Net.IntegrationTests/App.config
+++ b/Raygun.Druid4Net.IntegrationTests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="druid.broker.host" value="http://localhost"/>
+    <add key="druid.broker.host" value="http://localhost:8082"/>
   </appSettings>
 </configuration>
