--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <PackageVersion>2.0.1</PackageVersion>
   </PropertyGroup>
   <!-- NuGet Options -->
   <PropertyGroup>
