--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -2,15 +2,16 @@
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <PackageVersion>2.0.2</PackageVersion>
   </PropertyGroup>
   <!-- NuGet Options -->
   <PropertyGroup>
     <Authors>Raygun</Authors>
     <Company>Raygun</Company>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <Copyright>Copyright © Raygun 2018-2019</Copyright>
-    <Title>Druid4Net - A .NET druid.io client</Title>
-    <Description>A .NET druid.io client written in C#</Description>
+    <Title>Druid4Net - A .NET Apache Druid client</Title>
+    <Description>A .NET Apache Druid client written in C#</Description>
     <PackageId>Druid4Net</PackageId>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://github.com/MindscapeHQ/druid4net/blob/master/LICENSE</PackageLicenseUrl>
