--- a/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
+++ b/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
@@ -96,8 +96,16 @@
     <Compile Include="Fluent\Metrics\InvertedTopNMetricSpecTests.cs" />
     <Compile Include="Fluent\Metrics\NumericTopNMetricSpecTests.cs" />
     <Compile Include="Fluent\PostAggregations\ArithmeticPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\ConstantPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\DoubleGreatestPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\DoubleLeastPostAggregatorTests.cs" />
     <Compile Include="Fluent\PostAggregations\FieldAccessPostAggregatorTests.cs" />
     <Compile Include="Fluent\PostAggregations\FinalizingFieldAccessPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\HyperUniqueCardinalityPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\JavaScriptPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\LongGreatestPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\LongLeastPostAggregatorTests.cs" />
+    <Compile Include="Fluent\PostAggregations\PostAggregatorTestBase.cs" />
     <Compile Include="Fluent\QueryDescriptors\GroupByQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\ScanQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\SearchQueryDescriptorTests.cs" />
