--- a/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
+++ b/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Fluent\SearchQueries\InsensitiveContainsSearchQueryTests.cs" />
     <Compile Include="Fluent\SearchQueries\RegexSearchQueryTests.cs" />
     <Compile Include="Fluent\Sort\SortSpecTests.cs" />
+    <Compile Include="Fluent\VirtualColumns\ExpressionVirtualColumnTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
