--- a/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
+++ b/Raygun.Druid4Net.Tests/Raygun.Druid4Net.Tests.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Fluent\QueryDescriptors\GroupByQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\ScanQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\SearchQueryDescriptorTests.cs" />
+    <Compile Include="Fluent\QueryDescriptors\SegmentMetadataQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\SelectQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\TimeBoundaryQueryDescriptorTests.cs" />
     <Compile Include="Fluent\QueryDescriptors\TimeseriesQueryDescriptorTests.cs" />
