--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>net45;netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <PackageVersion>3.0.0</PackageVersion>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
   <!-- NuGet Options -->
   <PropertyGroup>
