--- a/Raygun.Druid4Net/Raygun.Druid4Net.csproj
+++ b/Raygun.Druid4Net/Raygun.Druid4Net.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <PackageVersion>3.0.0</PackageVersion>
     <LangVersion>9</LangVersion>
